# axum-graphql-prisma

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20230424003320_initial/: migration.sql
src/: main.rs  prisma.rs
src/graphql/: mod.rs  schema.rs  types.rs
src/graphql/mutation/: post.rs  user.rs
src/graphql/query/: post.rs  user.rs
