[package]
name = "axum-graphql-prisma"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.4.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.5.1"
dotenv = "0.15.0"
async-graphql = "3.0.12"
async-graphql-axum = "3.0.31"