[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
  # See more: https://prisma.brendonovich.dev/writing-data/create#create-many
  # 'sqlite-create-many',
  # See more: https://prisma.brendonovich.dev/extra/migrations
  "migrations",
  "sqlite",
], default-features = false }